fix: Correct alignment and margins

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ p {
 }
 
 .container {
-  margin: 10 px 15 px;
+  margin: auto;
   padding: 20px;
   border: 0 px solid #000;
   border-radius: 5 px;
@@ -36,7 +36,7 @@ p {
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-wrap: wrap;
-  width: 60%;
+  width: 80%;
 }
 
 .button {
